build: get rid of the sparse expand stuff
* i don't see a reason why we are doing this because we never deal
with flashing system img rawly
* This will put useless write on ssd..
* we don't have space on ssd

Change-Id: Icd53d161b8515f5eca238b98ad68515d69caa34f

--- a/core/Makefile
+++ b/core/Makefile
@@ -1891,14 +1891,38 @@ bacon: otapackage
 	@echo -e "${cya}Building ${bldcya}Solo ${txtrst}";
 	@echo -e ""
 	@echo -e ${CL_CYN}"xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-	@echo -e ${CL_MAG}"                                          "
-	@echo -e ${CL_MAG}"      ________           __               "
-	@echo -e ${CL_MAG}"     |   ___  |         |  |              "
-	@echo -e ${CL_MAG}"     |  /___\_|  _____  |  |  _____       "
-	@echo -e ${CL_MAG}"     |____   \  /     \ |  | /     \      "
-	@echo -e ${CL_MAG}"          |  |  |  |  | |  | |  |  |      "
-	@echo -e ${CL_MAG}"     |\___/  |  |  |  | |  | |  |  |      "
-	@echo -e ${CL_MAG}"     |_______/  \_____/ |__| \_____/      "
+	@echo -e ${CL_MAG}"| | | | | | | | | | | | | | | | | | | | | "
+	@echo -e ${CL_MAG}" | | | | | | | | | | | | | | | | | | | |  " 
+	@echo -e ${CL_MAG}"  | | | | | | | | | | | | | | | | | | |   "
+	@echo -e ${CL_CYN}"   | | | | | | | | | | | | | | | | | |    "
+	@echo -e ${CL_CYN}"   | | | | | | | | | | | | | | | | | |    "
+	@echo -e ${CL_MAG}"  | | | | | | | | | | | | | | | | | | |   "
+	@echo -e ${CL_MAG}" | | | | | | | | | | | | | | | | | | | |  "
+	@echo -e ${CL_CYN}"| | | | | | | | | | | | | | | | | | | | | "
+	@echo -e ${CL_CYN}"| | | | | | | | | | | | | | | | | | | | | "
+	@echo -e ${CL_MAG}" | | | | | | | | | | | | | | | | | | | |  " 
+	@echo -e ${CL_MAG}"  | | | | | | | | | | | | | | | | | | |   "
+	@echo -e ${CL_CYN}"   | | | | | | | | | | | | | | | | | |    "
+	@echo -e ${CL_CYN}"   | | | | | | | | | | | | | | | | | |    "
+	@echo -e ${CL_MAG}"  | | | | | | | | | | | | | | | | | | |   "
+	@echo -e ${CL_MAG}" | | | | | | | | | | | | | | | | | | | |  "
+	@echo -e ${CL_CYN}"| | | | | | | | | | | | | | | | | | | | | "
+	@echo -e ${CL_CYN}"| | | | | | | | | | | | | | | | | | | | | "
+	@echo -e ${CL_MAG}" | | | | | | | | | | | | | | | | | | | |  " 
+	@echo -e ${CL_MAG}"  | | | | | | | | | | | | | | | | | | |   "
+	@echo -e ${CL_CYN}"   | | | | | | | | | | | | | | | | | |    "
+	@echo -e ${CL_CYN}"   | | | | | | | | | | | | | | | | | |    "
+	@echo -e ${CL_MAG}"  | | | | | | | | | | | | | | | | | | |   "
+	@echo -e ${CL_MAG}" | | | | | | | | | | | | | | | | | | | |  "
+	@echo -e ${CL_MAG}"| | | | | | | | | | | | | | | | | | | | | "
+	@echo -e ${CL_MAG}"| | | | | | | | | | | | | | | | | | | | | "
+	@echo -e ${CL_MAG}" | | | | | | | | | | | | | | | | | | | |  " 
+	@echo -e ${CL_MAG}"  | | | | | | | | | | | | | | | | | | |   "
+	@echo -e ${CL_CYN}"   | | | | | | | | | | | | | | | | | |    "
+	@echo -e ${CL_CYN}"   | | | | | | | | | | | | | | | | | |    "
+	@echo -e ${CL_MAG}"  | | | | | | | | | | | | | | | | | | |   "
+	@echo -e ${CL_MAG}" | | | | | | | | | | | | | | | | | | | | |"
+	@echo -e ${CL_MAG}"| | | | | | | | | | | | | | | | | | | | | "
 	@echo -e ${CL_CYN}"xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 	@echo -e ""
 	@echo -e ${CL_CYN}"zip: "${CL_MAG} $(CUSTOM_TARGET_PACKAGE)${CL_RST}
